# bricktxt

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  SPECIFICATIONS.md  package.json  pnpm-workspace.yaml
editor/: .gitignore  pnpm-workspace.yaml
editor/platform-api/: .hg  package.json
editor/platform-api/src/: block.ts  document.ts  index.ts  module.ts  platform.ts
editor/platform-core/: package.json
editor/web-ui/: index.html  package.json  vite.config.ts
editor/web-ui/src/: App.tsx  backend.ts  main.tsx
editor/web-ui/src/components/: Block.tsx  Document.tsx  DragHint.tsx  DragSupport.tsx
editor/web-ui/src/context/: DragContainerProvider.tsx
editor/web-ui/src/store/: document.ts  drag-mutation.ts
engine/: Cargo.toml
engine/core/: Cargo.toml
engine/core/src/: document.rs  editor.rs  engine.rs  lib.rs  rand.rs  upstream.rs  view.rs
engine/core/src/editor/: placement.rs
engine/src/: lib.rs
engine/web-ui-layer/: Cargo.toml
engine/web-ui-layer/src/: datatypes.rs  engine_to_ui.rs  lib.rs  ui_to_engine.rs
engine/web-ui-layer/src/datatypes/: engine_to_ui.rs  ui_to_engine.rs
engine/web-wasm/: .gitignore  Cargo.toml  package.json
engine/web-wasm/src/: lib.rs
examples/: experiment.toml  experiment.yml  experimentation.yml
web-ui/backend-api/: package.json
web-ui/backend-api/src/: commands.ts  document.ts  index.ts
web-ui/core/: package.json
web-ui/core/src/: backend.ts  index.ts  view.ts
web-ui/editor/: package.json  tsconfig.json
web-ui/editor/src/: App.tsx  FloatOverlay.tsx  main.tsx
(+24 files in other folders)
