[package]
name = "bricktxt-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }

rand = { version =  "0.8.5", default-features = false, features = ["std", "small_rng", "getrandom"] }
getrandom = { version = "0.2.9", features = ["js"] }
