[package]
name = "bricktxt-web-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bricktxt-core = { path = "../core" }
bricktxt-web-ui-layer = { path = "../web-ui-layer" }

wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.5.0"

[features]
default = []
panic_hook = ["dep:console_error_panic_hook"]
